# commissions-service

./: .flake8  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: fastapi.mdc
.github/: CODEOWNERS
alembic/: env.py  script.py.mako
alembic/versions/: 42b5fd99f16d_create_initial_transaction_and_invoices_.py  91d2d16d3860_initialize_dmn.py
app/: main.py
app/modules/commissions/adapters/api/: __init__.py  commission.py
app/modules/commissions/adapters/dtos/: __init__.py  invoice.py  receivable.py  transaction.py
app/modules/commissions/application/strategies/: __init__.py  daily_strategy.py  monthly_strategy.py  period_strategy.py  weekly_strategy.py
app/modules/commissions/application/use_cases/: __init__.py  create_commission.py
app/modules/commissions/domain/entities/: invoice.py  transaction.py
app/modules/commissions/domain/enums/: __init__.py  invoice_status.py  invoice_type.py  transaction_type.py
app/modules/commissions/domain/interfaces/: __init__.py  (+4 more)
app/shared/: __init__.py  settings.py
app/shared/adapters/api/: __init__.py  core.py
app/shared/application/: logger.py
app/shared/application/pipelines/: async_pipeline.py
app/shared/domain/interfaces/: __init__.py  async_pipeline.py  async_step.py  base_repository.py  logger.py  raw_repository.py
app/shared/infrastructure/: __init__.py  logger.py  mongodb.py  postgres.py
app/shared/infrastructure/repositories/: __init__.py  mongo_repository.py  postgres_repository.py  raw_repository.py
app/shared/utils/: __init__.py  singleton.py  to_dict.py
(+29 files in other folders)
